# NLP-Powered-Medical-Entity-Extraction

./: .gitignore  COMPLETE_PROJECT_DELIVERY.txt  Makefile  PROJECT_INDEX.md  PROJECT_SUMMARY.md  README.md  SETUP.md  main.py  medical_bot.session  pyproject.toml  requirements.txt
dbt/: dbt_project.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  GIT_WORKFLOW.md  NLP_GUIDE.md  TROUBLESHOOTING.md
nlp_medical_dbt/: dbt_project.yml
scripts/: download_nlp_models.py  load_to_postgres.py  run_extraction.py  run_nlp_pipeline.py  setup_db.py  setup_environment.sh
src/api/: main.py  middleware.py  security.py
src/api/routes/: __init__.py  analytics.py  nlp.py  products.py
src/core/: config.py  exceptions.py  logger.py  validators.py
src/dashboard/: __init__.py  app.py  components.py  visualizations.py  wordcloud_generator.py
src/database/: __init__.py  connection.py  crud.py  migrations.py  models.py  schemas.py
src/extraction/: __init__.py  channel_scraper.py  media_downloader.py  message_handler.py  telegram_client.py
src/nlp/: entity_linker.py  medical_ner.py  message_processor.py  text_classifier.py
src/transformations/: __init__.py  aggregations.py  data_cleaner.py  dbt_runner.py  quality_checks.py
src/utils/: __init__.py  constants.py  decorators.py  helpers.py  text_utils.py
tests/integration/: test_api_integration.py  test_database_operations.py  test_nlp_pipeline.py
tests/performance/: test_api_performance.py  test_nlp_performance.py
tests/unit/: test_api_routes.py  test_config.py  test_crud.py  test_entity_linker.py  test_medical_ner.py  test_message_processor.py  test_text_classifier.py
