[project]
name = "nlp-powered-medical-entity-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "dbt>=1.0.0.40.14",
    "fastapi>=0.129.0",
    "ipykernel>=7.2.0",
    "llvmlite>=0.40.0",
    "matplotlib>=3.10.8",
    "numba>=0.57.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "shap>=0.42.1",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "telethon>=1.42.0",
    "ultralytics>=8.4.14",
]
