[project]
name = "nlp-powered-medical-entity-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "dbt>=1.0.0.40.14",
    "dbt-postgres>=1.10.0",
    "fastapi>=0.129.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.20",
    "ipykernel>=7.2.0",
    "llvmlite>=0.40.0",
    "matplotlib>=3.10.8",
    "numba>=0.57.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-certifi-win32>=1.6.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "shap>=0.42.1",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "telethon>=1.42.0",
    "transformers>=5.1.0",
    "ultralytics>=8.4.14",
    "uvicorn>=0.40.0",
    "wordcloud>=1.9.6",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:spacy.util",
    "ignore::pydantic.PydanticDeprecatedSince20",
]
